--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="mysql://root:root1234@localhost:3306/shopyy"
+
+JWT_SECRET=1234
